style: fixed nav extra padding

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,7 +18,7 @@ body {
 }
 
 .navbar {
-  // padding: 0;
+  padding: 0;
 
   .social-icons {
     background-color: var(--main-nav-color);
